<resources>
    <string name="app_name">SmartCart</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Anonymous User</string>
    <string name="nav_header_subtitle">Login/Register</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_cart">Cart Management</string>
    <string name="menu_cart_selection">Cart Selection</string>
    <string name="menu_products">Products to buy</string>
    <string name="menu_account">Account</string>
    <string name="login_via_google">Login</string>
    <string name="want_register">Register a new account</string>
    <string name="logout">Logout</string>
    <string name="you_are_anonymous_user">You are Anonymous User</string>
    <string name="user_avatar">User Avatar</string>
    <string name="quantity">Quantity</string>
    <string name="status">Status</string>
    <string name="product_name">Product Name</string>
    <string name="or_text">or</string>
    <string name="full_name">Full Name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="provide_your_information">Provide your information!</string>
    <string name="refresh">Refresh</string>
    <string name="back_to_login">Back To Login</string>
    <string name="selected_cart">Selected Cart:</string>
    <string name="products_in_this_cart">Products in this cart:</string>
    <string name="add_product">Add product</string>
    <string name="enter_product_name">Enter product name</string>
    <string name="enter_product_quantity">Enter product quantity</string>
</resources>