<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="ua.nure.smartcart.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="ua.nure.smartcart.ui.gallery.CartGalleryFragment"
        android:label="@string/menu_cart"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="ua.nure.smartcart.ui.slideshow.CartSelectionFragment"
        android:label="@string/menu_cart_selection"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_account"
        android:name="ua.nure.smartcart.ui.account.AccountFragment"
        android:label="@string/action_settings"
        tools:layout="@layout/fragment_account" />
</navigation>