<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="197dp"
        tools:layout_editor_absoluteY="246dp">

        <ImageView
            android:id="@+id/user_profile_icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="141dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="142dp"
            android:contentDescription="@string/user_avatar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/anon_user"
            tools:srcCompat="@drawable/anon_user" />

        <TextView
            android:id="@+id/login_name"
            android:layout_width="287dp"
            android:layout_height="24dp"
            android:layout_marginStart="145dp"
            android:layout_marginTop="46dp"
            android:layout_marginEnd="160dp"
            android:layout_marginBottom="374dp"
            android:fontFamily="casual"
            android:text="@string/you_are_anonymous_user"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.458"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_profile_icon"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/logout_button"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="125dp"
            android:layout_marginEnd="126dp"
            android:layout_marginBottom="16dp"
            android:text="@string/logout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginStart="125dp"
            android:layout_marginTop="152dp"
            android:layout_marginEnd="125dp"
            android:text="@string/login_via_google"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.512"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_name" />

        <ImageView
            android:id="@+id/login_google_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="44dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_button"
            app:srcCompat="@drawable/google_icon"
            tools:visibility="gone" />

        <TextView
            android:id="@+id/or_text1"
            android:layout_width="13dp"
            android:layout_height="wrap_content"
            android:text="@string/or_text"
            app:layout_constraintBottom_toTopOf="@+id/login_google_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_button"
            app:layout_constraintVertical_bias="0.56"
            tools:visibility="gone" />

        <TextView
            android:id="@+id/or_text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/or_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_google_button"
            tools:visibility="gone" />

        <EditText
            android:id="@+id/login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:ems="10"
            android:hint="@string/login_via_google"
            android:inputType="text"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/login_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_name"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="Password"
            android:inputType="textPassword"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/login_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/go_register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/want_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/or_text2"
            android:visibility="gone" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>